unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Logo_Image__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Logo_Image__c</fullName>
    <description>The image defined in this field appears in the lefthand side of the navbar in the microsite.
            Recommended size 90px by 90px. (Image will be cropped to these dimensions)</description>
    <inlineHelpText>The image defined in this field appears in the lefthand side of the navbar in the microsite.
            Recommended size 90px by 90px. (Image will be cropped to these dimensions)</inlineHelpText>
    <label>Logo Image URL</label>
    <type>Url</type>
</CustomField>