unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Navbar_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Navbar_Background_Color__c</fullName>
    <defaultValue>&quot;#999999&quot;</defaultValue>
    <description>Background color of the related event&#39;s navigation. Valid hexadecimal notation required.</description>
    <inlineHelpText>Background color of the related event&#39;s navigation. Valid hexadecimal notation required.</inlineHelpText>
    <label>Navbar Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>