unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Navbar_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Navbar_Text_Color__c</fullName>
    <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
    <description>Color of the related event&#39;s navigation text. Valid hexadecimal notation required.</description>
    <inlineHelpText>Color of the related event&#39;s navigation text. Valid hexadecimal notation required.</inlineHelpText>
    <label>Navbar Text Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>