unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__One_Form_Per_Order__c.field-meta.xml
<CustomField>
    <fullName>EventApi__One_Form_Per_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Primary Attendee will only need to fill out a single form during ticket registration.</description>
    <inlineHelpText>The Primary Attendee will only need to fill out a single form during ticket registration.</inlineHelpText>
    <label>DEPRECATED</label>
    <type>Checkbox</type>
</CustomField>