unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Overview_HTML__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Overview_HTML__c</fullName>
    <description>Description of the event. Used on the event main page, in calendar reminders, and in emails.</description>
    <inlineHelpText>Description of the event. Used on the event main page, in calendar reminders, and in emails.</inlineHelpText>
    <label>Overview HTML</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>