unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Primary_Button_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Primary_Button_Background_Color__c</fullName>
    <defaultValue>&quot;#00AAFF&quot;</defaultValue>
    <description>Background color of all primary buttons in the related event. Valid hexadecimal notation required.</description>
    <inlineHelpText>Background color of all primary buttons in the related event. Valid hexadecimal notation required.</inlineHelpText>
    <label>Primary Button Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>