unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Primary_Button_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Primary_Button_Text_Color__c</fullName>
    <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
    <description>Text color of all primary buttons in the related event. Valid hexadecimal notation required.</description>
    <inlineHelpText>Text color of all primary buttons in the related event. Valid hexadecimal notation required.</inlineHelpText>
    <label>Primary Button Text Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>