unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Process_Bar_Color__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Process_Bar_Color__c</fullName>
    <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
    <description>Color of all text in the related event&#39;s registration process bar. Valid hexadecimal notation required.</description>
    <inlineHelpText>Color of all text in the related event&#39;s registration process bar. Valid hexadecimal notation required.</inlineHelpText>
    <label>Process Bar Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>