unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Process_Bar_Foreground_Color__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Process_Bar_Foreground_Color__c</fullName>
    <defaultValue>&quot;#666666&quot;</defaultValue>
    <description>Foreground color of the related event&#39;s registration process bar. Valid hexadecimal notation required.</description>
    <inlineHelpText>Foreground color of the related event&#39;s registration process bar. Valid hexadecimal notation required.</inlineHelpText>
    <label>Process Bar Foreground Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>