unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Quantity_Remaining__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Quantity_Remaining__c</fullName>
    <description>The capacity / ticket quantity on the event minus the tickets sold.</description>
    <formula>EventApi__Capacity__c - EventApi__Quantity_Sold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The capacity / ticket quantity on the event minus the tickets sold.</inlineHelpText>
    <label>Tickets Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>