unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Quantity_Sold__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Quantity_Sold__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The sum of all sold tickets of any type.</description>
    <inlineHelpText>The sum of all sold tickets of any type.</inlineHelpText>
    <label>Tickets Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>