unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Register_Now_Accept_Override_URL__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Register_Now_Accept_Override_URL__c</fullName>
    <description>A URL that defines a custom destination for the Register Now/Accept button on the Event Overview page.</description>
    <inlineHelpText>A URL that defines a custom destination for the Register Now/Accept button on the Event Overview page.</inlineHelpText>
    <label>Register Now/Accept Override URL</label>
    <type>Url</type>
</CustomField>