unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Registration_Style__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_Style__c</fullName>
    <description>Determines which page layouts are used to display the event, as well as the settings available for ticketing and/or registration.</description>
    <inlineHelpText>Determines which page layouts are used to display the event, as well as the settings available for ticketing and/or registration.</inlineHelpText>
    <label>Registration Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lightning Event</fullName>
                <default>true</default>
                <label>Lightning Event</label>
            </value>
            <value>
                <fullName>Community Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>