unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Registration_Timer__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_Timer__c</fullName>
    <defaultValue>15</defaultValue>
    <description>The time allowed for purchasing an event registration.</description>
    <inlineHelpText>The time allowed for purchasing an event registration.</inlineHelpText>
    <label>Registration Timer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>