unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_URL__c</fullName>
    <description>** System Calculated ** Link to the webpage generated for the Event.</description>
    <inlineHelpText>** System Calculated ** Link to the webpage generated for the Event.</inlineHelpText>
    <label>Registration URL</label>
    <type>Url</type>
</CustomField>