unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Schedule_Item_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Schedule_Item_Display_Name__c</fullName>
    <defaultValue>$Label.eventapi__session_shopping_cart_instructions</defaultValue>
    <description>The text in this field will be used to guide buyers through the shopping cart when selecting sessions.</description>
    <inlineHelpText>The text in this field will be used to guide buyers through the shopping cart when selecting sessions.</inlineHelpText>
    <label>Schedule Item(s) Display Name</label>
    <type>TextArea</type>
</CustomField>