unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Search_All_Contacts__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Search_All_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By selecting this field, any contact authenticated or unauthenticated will be able to search all contacts in the system. (Privacy settings considered)</description>
    <inlineHelpText>By selecting this field, any contact authenticated or unauthenticated will be able to search all contacts in the system. (Privacy settings considered)</inlineHelpText>
    <label>Search All Contacts</label>
    <type>Checkbox</type>
</CustomField>