unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Session_Shopping_Cart_Instructions__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Session_Shopping_Cart_Instructions__c</fullName>
    <defaultValue>$Label.eventapi__session_shopping_cart_instructions</defaultValue>
    <description>The text in this field will be used to guide buyers through the shopping cart when selecting sessions.</description>
    <inlineHelpText>The text in this field will be used to guide buyers through the shopping cart when selecting sessions.</inlineHelpText>
    <label>Session Shopping Cart Instructions</label>
    <type>TextArea</type>
</CustomField>