unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Session_Shopping_Cart_Label__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Session_Shopping_Cart_Label__c</fullName>
    <defaultValue>$Label.eventapi__session_shopping_cart_label</defaultValue>
    <description>The text in this field will display in the shopping cart side bar navigation once the ticket type has been selected.</description>
    <inlineHelpText>The text in this field will display in the shopping cart side bar navigation once the ticket type has been selected.</inlineHelpText>
    <label>Session Shopping Cart Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>