unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Sold_Out__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Sold_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if number of registered attendee records are reached to event capacity.</description>
    <inlineHelpText>Identifies if number of registered attendee records are reached to event capacity.</inlineHelpText>
    <label>Sold Out</label>
    <type>Checkbox</type>
</CustomField>