unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Sponsor_Item_Class__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Sponsor_Item_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a system field. Update at your own risk.</description>
    <inlineHelpText>This field is a system field. Update at your own risk.</inlineHelpText>
    <label>SYSTEM</label>
    <referenceTo>OrderApi__Item_Class__c</referenceTo>
    <relationshipLabel>Events (Sponsor Item Class)</relationshipLabel>
    <relationshipName>Events3</relationshipName>
    <type>Lookup</type>
</CustomField>