unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Start_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>**Required** The event start date.</description>
    <inlineHelpText>**Required** The event start date.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>