unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Start_Date_Time__c</fullName>
    <description>**Required** The event start date and time (mm/dd/yyyy hh:mm:ss).</description>
    <inlineHelpText>**Required** The event start date and time (mm/dd/yyyy hh:mm:ss).</inlineHelpText>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>