unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Status__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Status__c</fullName>
    <description>Status of the event. Must be &quot;active&quot; to be visible in the Portal.</description>
    <inlineHelpText>Status of the event. Must be &quot;active&quot; to be visible in the Portal.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Active</fullName>
                <color>#78C953</color>
                <label>Active</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <color>#E27001</color>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>