unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Thumbnail_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Thumbnail_Image_URL__c</fullName>
    <description>Secondary image for the event.</description>
    <inlineHelpText>Secondary image for the event.</inlineHelpText>
    <label>Thumbnail Image URL</label>
    <type>Url</type>
</CustomField>