unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Ticket_Sales_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Ticket_Sales_Start_Date__c</fullName>
    <description>The date ticket sales or registration begins for the event. Defaults to the &quot;Active&quot; date if left blank.</description>
    <inlineHelpText>The date ticket sales or registration begins for the event. Defaults to the &quot;Active&quot; date if left blank.</inlineHelpText>
    <label>Ticket Sales Start Date</label>
    <type>Date</type>
</CustomField>