unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Ticket_Type_Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Ticket_Type_Sort_Field__c</fullName>
    <defaultValue>&quot;NAME&quot;</defaultValue>
    <description>Use with Ticket Type Sort Order. Specifies the field that is used to organize tickets on the registration page. Use &quot;EventApi__Price__c&quot; for price and &quot;Name&quot; for name.</description>
    <inlineHelpText>Use with Ticket Type Sort Order. Specifies the field that is used to organize tickets on the registration page. Use &quot;EventApi__Price__c&quot; for price and &quot;Name&quot; for name.</inlineHelpText>
    <label>Ticket Type Sort Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>