unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Ticket_Type_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Ticket_Type_Sort_Order__c</fullName>
    <description>Use with Ticket Type Sort Field. Specifies whether tickets are shown in ascending or descending order.</description>
    <inlineHelpText>Use with Ticket Type Sort Field. Specifies whether tickets are shown in ascending or descending order.</inlineHelpText>
    <label>Ticket Type Sort Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ascending</fullName>
                <default>true</default>
                <label>Ascending</label>
            </value>
            <value>
                <fullName>Descending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>