unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Time_Zone__c</fullName>
    <description>The time zone of the event location.</description>
    <inlineHelpText>The time zone of the event location.</inlineHelpText>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(GMT+13:00) Pacific/Enderbury</fullName>
            </value>
            <value>
                <fullName>(GMT+13:00) Pacific/Tongatapu</fullName>
            </value>
            <value>
                <fullName>(GMT+12:45) Pacific/Chatham</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Asia/Kamchatka</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Pacific/Auckland</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Pacific/Fiji</fullName>
            </value>
            <value>
                <fullName>(GMT+11:30) Pacific/Norfolk</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Pacific/Guadalcanal</fullName>
            </value>
            <value>
                <fullName>(GMT+10:30) Australia/Lord_Howe</fullName>
            </value>
            <value>
                <fullName>(GMT+10:00) Australia/Brisbane</fullName>
            </value>
            <value>
                <fullName>(GMT+10:00) Australia/Sydney</fullName>
            </value>
            <value>
                <fullName>(GMT+09:30) Australia/Adelaide</fullName>
            </value>
            <value>
                <fullName>(GMT+09:30) Australia/Darwin</fullName>
            </value>
            <value>
                <fullName>(GMT+09:00) Asia/Seoul</fullName>
            </value>
            <value>
                <fullName>(GMT+09:00) Asia/Tokyo</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Asia/Hong_Kong</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Asia/Kuala_Lumpur</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Asia/Manila</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Asia/Shanghai</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Asia/Singapore</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Asia/Taipei</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Australia/Perth</fullName>
            </value>
            <value>
                <fullName>(GMT+07:00) Asia/Bangkok</fullName>
            </value>
            <value>
                <fullName>(GMT+07:00) Asia/Ho_Chi_Minh</fullName>
            </value>
            <value>
                <fullName>(GMT+07:00) Asia/Jakarta</fullName>
            </value>
            <value>
                <fullName>(GMT+06:30) Asia/Rangoon</fullName>
            </value>
            <value>
                <fullName>(GMT+06:00) Asia/Dhaka</fullName>
            </value>
            <value>
                <fullName>(GMT+05:45) Asia/Kathmandu</fullName>
            </value>
            <value>
                <fullName>(GMT+05:30) Asia/Colombo</fullName>
            </value>
            <value>
                <fullName>(GMT+05:30) Asia/Kolkata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>