unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Topic__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Topic__c</fullName>
    <description>** System Calculated Recommended ** Provide users the ability to search for Events by Topic by selecting the most appropriate Topic from the given list. Derives from the parent Event Category if undefined.</description>
    <inlineHelpText>** System Calculated Recommended ** Provide users the ability to search for Events by Topic by selecting the most appropriate Topic from the given list. Derives from the parent Event Category if undefined.</inlineHelpText>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academia</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Alternative Medicine</fullName>
            </value>
            <value>
                <fullName>Apparel &amp; Fashion</fullName>
            </value>
            <value>
                <fullName>Architecture &amp; Planning</fullName>
            </value>
            <value>
                <fullName>Arts &amp; Crafts</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
            </value>
            <value>
                <fullName>Broadcast Media</fullName>
            </value>
            <value>
                <fullName>Building Materials</fullName>
            </value>
            <value>
                <fullName>Business Supplies &amp; Equipment</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Civic &amp; Social Organizations</fullName>
            </value>
            <value>
                <fullName>Civil Engineering</fullName>
            </value>
            <value>
                <fullName>Civil Service</fullName>
            </value>
            <value>
                <fullName>Composites</fullName>
            </value>
            <value>
                <fullName>Computer &amp; Network Security</fullName>
            </value>
            <value>
                <fullName>Computer Games</fullName>
            </value>
            <value>
                <fullName>Computer Hardware</fullName>
            </value>
            <value>
                <fullName>Computer Networking</fullName>
            </value>
            <value>
                <fullName>Computer Software</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Consumer Electronics</fullName>
            </value>
            <value>
                <fullName>Consumer Goods</fullName>
            </value>
            <value>
                <fullName>Consumer Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>