unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Total_Event_Capacity__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Total_Event_Capacity__c</fullName>
    <description>** System Calculated **  Total number of individual tickets + (total number of group tickets x number of attendees per group ticket).</description>
    <inlineHelpText>** System Calculated **  Total number of individual tickets + (total number of group tickets x number of attendees per group ticket).</inlineHelpText>
    <label>Total Event Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>