unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__Waitlist_Entries__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Waitlist_Entries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of people currently waitlisted for the event. Does not include people waitlisted for individual ticket types.</description>
    <inlineHelpText>Number of people currently waitlisted for the event. Does not include people waitlisted for individual ticket types.</inlineHelpText>
    <label>RESERVED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>