unpackaged/main/default/objects/EventApi__Event__c/fields/EventApi__When_and_Where_Summary__c.field-meta.xml
<CustomField>
    <fullName>EventApi__When_and_Where_Summary__c</fullName>
    <description>Summary text to display on the checkout and confirmation page. When event is marked active, this field will prepopulate with the dates and primary venue information.</description>
    <inlineHelpText>Summary text to display on the checkout and confirmation page. When event is marked active, this field will prepopulate with the dates and primary venue information.</inlineHelpText>
    <label>When and Where Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>