unpackaged/main/default/objects/EventApi__Event__c/fields/Is_NCP_Exam__c.field-meta.xml
<CustomField>
    <fullName>Is_NCP_Exam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is NCP Exam</label>
    <type>Checkbox</type>
</CustomField>