unpackaged/main/default/objects/EventApi__Event__c/fields/ROEApi__Active_Ticket_Type_Count__c.field-meta.xml
<CustomField>
    <fullName>ROEApi__Active_Ticket_Type_Count__c</fullName>
    <description>Total number of active ticket types</description>
    <inlineHelpText>Total number of active ticket types.</inlineHelpText>
    <label>SYSTEM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>