unpackaged/main/default/objects/EventApi__Event__c/fields/ROEApi__Event_Duration_Text__c.field-meta.xml
<CustomField>
    <fullName>ROEApi__Event_Duration_Text__c</fullName>
    <description>** System Calculated** Event Duration Calculated based on start and end date</description>
    <inlineHelpText>** System Calculated** Event Duration Calculated based on start and end date</inlineHelpText>
    <label>SYSTEM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>