unpackaged/main/default/objects/EventApi__Event__c/listViews/Active_Events.listView-meta.xml
<ListView>
    <fullName>Active_Events</fullName>
    <columns>NAME</columns>
    <columns>EventApi__Business_Group__c</columns>
    <columns>EventApi__Capacity__c</columns>
    <columns>EventApi__Start_Date__c</columns>
    <columns>EventApi__Start_Time__c</columns>
    <columns>EventApi__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EventApi__Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Events</label>
</ListView>