unpackaged/main/default/objects/EventApi__Event__c/listViews/Community_Events.listView-meta.xml
<ListView>
    <fullName>Community_Events</fullName>
    <columns>NAME</columns>
    <columns>EventApi__Registration_Style__c</columns>
    <columns>EventApi__Business_Group__c</columns>
    <columns>EventApi__Capacity__c</columns>
    <columns>EventApi__Start_Date__c</columns>
    <columns>EventApi__Start_Time__c</columns>
    <columns>EventApi__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EventApi__Registration_Style__c</field>
        <operation>equals</operation>
        <value>Community Event</value>
    </filters>
    <label>Community Events</label>
</ListView>