unpackaged/main/default/objects/EventApi__Event__c/listViews/EventApi__All.listView-meta.xml
<ListView>
    <fullName>EventApi__All</fullName>
    <columns>NAME</columns>
    <columns>EventApi__Display_Name__c</columns>
    <columns>EventApi__Attendees__c</columns>
    <columns>EventApi__Status__c</columns>
    <columns>EventApi__Registration_Style__c</columns>
    <columns>EventApi__Description__c</columns>
    <columns>EventApi__Capacity__c</columns>
    <columns>EventApi__Start_Date_Time__c</columns>
    <columns>EventApi__End_Date_Time__c</columns>
    <columns>EventApi__Ticket_Sales_Start_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Is_NCP_Exam__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>