unpackaged/main/default/objects/EventApi__Event__c/listViews/NCP_exam.listView-meta.xml
<ListView>
    <fullName>NCP_exam</fullName>
    <columns>NAME</columns>
    <columns>EventApi__Status__c</columns>
    <columns>EventApi__Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EventApi__Display_Name__c</field>
        <operation>contains</operation>
        <value>NCP</value>
    </filters>
    <label>NCP exam</label>
</ListView>