unpackaged/main/default/objects/EventApi__Event__c/listViews/NCP_Workshops.listView-meta.xml
<ListView>
    <fullName>NCP_Workshops</fullName>
    <columns>NAME</columns>
    <columns>EventApi__Display_Name__c</columns>
    <columns>EventApi__Attendees__c</columns>
    <columns>EventApi__Status__c</columns>
    <columns>EventApi__Registration_Style__c</columns>
    <columns>EventApi__Description__c</columns>
    <columns>EventApi__Capacity__c</columns>
    <columns>EventApi__Start_Date_Time__c</columns>
    <columns>EventApi__End_Date_Time__c</columns>
    <columns>EventApi__Ticket_Sales_Start_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Is_NCP_Exam__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>NCP Workshop</value>
    </filters>
    <label>NCP Workshops</label>
</ListView>