unpackaged/main/default/objects/EventApi__Event__c/listViews/Past_Events.listView-meta.xml
<ListView>
    <fullName>Past_Events</fullName>
    <columns>NAME</columns>
    <columns>EventApi__Business_Group__c</columns>
    <columns>EventApi__Capacity__c</columns>
    <columns>EventApi__Start_Date__c</columns>
    <columns>EventApi__Start_Time__c</columns>
    <columns>EventApi__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EventApi__End_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Past Events</label>
</ListView>